--- a/src/pages/tg-menu/tg-menu.html
+++ b/src/pages/tg-menu/tg-menu.html
@@ -1,6 +1,6 @@
 <ion-footer>
   <ion-toolbar class="bottom-footer">
-    <button ion-button full icon-left clear color="primary">
+    <button ion-button full icon-left clear color="primary" (click)="presentModal()">
         <ion-icon name="add"></ion-icon>
         Add new list
       </button>
