added new list modal

--- a/src/pages/tg-add-item/tg-add-item.html
+++ b/src/pages/tg-add-item/tg-add-item.html
@@ -12,7 +12,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-item>
+        <ion-item style="padding-left: 0;">
           <ion-label floating>Item Name</ion-label>
           <ion-input type="text"></ion-input>
         </ion-item>
@@ -20,7 +20,7 @@
     </ion-row>
     <ion-row class="quantity-select-row">
       <ion-col width-50>
-        <ion-item>
+        <ion-item style="padding-left: 0;">
           <ion-label floating>Quantity</ion-label>
           <ion-input type="text"></ion-input>
         </ion-item>
