adding firt list using rxjs

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,6 +15,7 @@
 </ion-header>
 <ion-content #popoverContent padding class="popover-page">
   <div #popoverText class="text-to-change">
+    {{list}}
   </div>
   <ion-fab right bottom>
     <button color="primary" ion-fab (click)="addItem($event)"><ion-icon name="add"></ion-icon></button>
