--- a/platforms/windows/www/index.html
+++ b/platforms/windows/www/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -14,7 +14,6 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#283593">
   <!-- cordova.js required for cordova apps -->
-  <script type="text/javascript" src="/www/WinJS/js/base.js"></script>
   <script src="cordova.js"></script>
   <!-- un-comment this code to enable service worker
   <script>
