added indexeddb support

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,9 +24,9 @@
           {{item.name}}
         </button>
         <ion-item-options side="right">
-          <button ion-button color="secondary">
-        <ion-icon name="call"></ion-icon>
-        Call
+          <button ion-button color="danger">
+        <ion-icon name="trash"></ion-icon>
+        Delete
       </button>
         </ion-item-options>
       </ion-item-sliding>
@@ -34,11 +34,5 @@
   </div>
   <ion-fab right bottom>
     <button color="primary" ion-fab (click)="addItem($event)"><ion-icon name="add"></ion-icon></button>
-    <!--<ion-fab-list side="left">
-      <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
-    </ion-fab-list>-->
   </ion-fab>
 </ion-content>
