--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,26 @@
 <ion-header>
   <ion-navbar color="primary">
-    <button ion-button menuToggle icon-only>
-      <ion-icon name='menu'></ion-icon>
+    <button *ngIf="!showSearchBar" ion-button menuToggle icon-only>
+      <ion-icon  name='menu'></ion-icon>
     </button>
-    <ion-title>
+    <ion-buttons start *ngIf="showSearchBar">
+      <button ion-button icon-only (click)="hideSearchBar()" class="srbar-back-parent">
+        <ion-icon name='arrow-back' id="srbar-back" class="srbar-back"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title *ngIf="!showSearchBar">
       Todo Grocery
     </ion-title>
-    <ion-buttons end>
+    <ion-buttons end *ngIf="!showSearchBar">
+      <button ion-button icon-only (click)="openSearchBar($event)">
+          <ion-icon name="search"></ion-icon>
+        </button>
       <button ion-button icon-only (click)="presentPopover($event)">
-        <ion-icon name="search"></ion-icon>
-      </button>
-      <button ion-button icon-only (click)="presentPopover($event)">
-        <ion-icon name="more"></ion-icon>
-      </button>
+          <ion-icon name="more"></ion-icon>
+        </button>
+    </ion-buttons>
+    <ion-buttons end *ngIf="showSearchBar" style="width: 100%;">
+      <ion-searchbar class="search-bar" id="srbar" (input)="getItems($event)"></ion-searchbar>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
