adding additem modal

--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -28,11 +28,21 @@
   <tg-menu (onChange)="changeCurrentStore($event)"></tg-menu>
 </ion-menu>
 <ion-content #content padding list-page>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-list no-lines class="store-item-list">
+    <ion-item-sliding #item>
+      <button ion-item detail-none>
+        <div item-left>Mango</div>
+        <div item-right>3 dz</div>
+      </button>
+      <ion-item-options side="right">
+        <button ion-button color="danger">
+        <ion-icon name="trash"></ion-icon>
+          Delete
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+  <ion-fab right bottom>
+    <button (click)="addNewItem($event)" ion-fab color="primary"><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
