--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -25,7 +25,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-menu [content]="content">
-  <tg-menu (onChange)="changeCurrentStore($event)"></tg-menu>
+  <tg-menu></tg-menu>
 </ion-menu>
 <ion-content #content padding list-page>
   <ion-list no-lines class="store-item-list">
