--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -39,7 +39,7 @@
         <div [ngClass]="{'item-checker': item.checked}"></div>
       </button>
       <ion-item-options side="right">
-        <button ion-button color="danger">
+        <button ion-button color="danger" (click)="deleteItem(item)">
         <ion-icon name="trash"></ion-icon>
           Delete
         </button>
