--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -8,6 +8,9 @@
     <ion-title>Todo Grocery</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="toggleSearch($event)">
+        <ion-icon name="ios-arrow-down"></ion-icon>
+      </button>
+      <button ion-button icon-only (click)="toggleSearch($event)">
         <ion-icon name="search"></ion-icon>
       </button>
       <button ion-button icon-only (click)="openPopover($event)">
