--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,5 +1,5 @@
 <ion-header app-toolbar>
-  <ion-toolbar [color]="factory.theme | async" theme *ngIf="!search && !selectItemInProgress">
+  <ion-toolbar main-toolbar [color]="factory.theme | async" theme *ngIf="!search && !selectItemInProgress">
     <ion-buttons start>
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
@@ -18,7 +18,7 @@
       </button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-toolbar [color]="factory.theme | async" *ngIf="search">
+  <ion-toolbar search-toolbar [color]="factory.theme | async" *ngIf="search">
     <ion-buttons start search-back-button>
       <button ion-button icon-only (click)="toggleSearch($event)">
         <ion-icon name="arrow-back"></ion-icon>
