--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -28,7 +28,7 @@
   </ion-toolbar>
   <ion-toolbar item-select-toolbar color="full-light" *ngIf="!search && selectItemInProgress">
     <ion-buttons start>
-      <ion-checkbox [color]="factory.theme | async" (click)="toggleSelectAllItems($event)" [checked]="toggleAllItems"></ion-checkbox>
+      <ion-checkbox [color]="factory.theme | async" (click)="toggleSelectAllItems($event, !toggleAllItems)" [checked]="toggleAllItems"></ion-checkbox>
     </ion-buttons>
     <ion-title>Select All</ion-title>
     <ion-buttons end>
@@ -48,24 +48,24 @@
 <ion-content #popoverContent #content padding list-page>
   <ion-list no-lines class="store-item-list">
     <ion-item-sliding *ngFor="let item of (factory.items | async) | searchFor:searchQuery">
-      <button ion-item detail-none class="item-button" (click)="checkItem(item)"  (press)="enableSelectItems($event, item)">
-        <div item-left item-name-block>
-          <div>
-            <ion-checkbox [color]="factory.theme | async" (ionChange)="selectItem($event, item)" [checked]="allItemsSelected" *ngIf="selectItemInProgress"></ion-checkbox>
+      <button ion-item detail-none class="item-button" (click)="checkItem(item)" (press)="enableSelectItems($event, item)">
+          <div item-left item-name-block>
+            <div>
+              <ion-checkbox [color]="factory.theme | async" (click)="selectItem($event, item)" [checked]="allItemsSelected" *ngIf="selectItemInProgress"></ion-checkbox>
+            </div>
+            <div>{{item.name}}</div>
           </div>
-          <div>{{item.name}}</div>
-        </div>
-        <div item-right class="quantity-unit-block">
-          <div>{{item.quantity}}</div>
-          <div>{{getUnitByIndex(item.unit)}}</div>
-        </div>
-        <div [ngClass]="{'item-checker': item.checked}"></div>
-      </button>
+          <div item-right class="quantity-unit-block">
+            <div>{{item.quantity}}</div>
+            <div>{{getUnitByIndex(item.unit)}}</div>
+          </div>
+          <div [ngClass]="{'item-checker': item.checked}"></div>
+        </button>
       <ion-item-options side="right">
         <button ion-button color="danger" (click)="deleteItem(item)">
-        <ion-icon name="trash"></ion-icon>
-          Delete
-        </button>
+          <ion-icon name="trash"></ion-icon>
+            Delete
+          </button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
