--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -32,7 +32,7 @@
     </ion-buttons>
     <ion-title>Select All</ion-title>
     <ion-buttons end>
-      <button ion-button>
+      <button ion-button (click)="deleteSelectedItems($event)">
         <ion-icon color="danger" name="trash"></ion-icon>
         Delete
       </button>
