--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,5 +1,5 @@
 <ion-header app-toolbar>
-  <ion-toolbar main-toolbar [color]="factory.theme | async" theme *ngIf="!search && !selectItemInProgress">
+  <ion-toolbar main-toolbar [color]="(factory.appSettings | async).theme" theme *ngIf="!search && !selectItemInProgress">
     <ion-buttons start>
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
@@ -18,7 +18,7 @@
       </button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-toolbar search-toolbar [color]="factory.theme | async" *ngIf="search">
+  <ion-toolbar search-toolbar [color]="(factory.appSettings | async).theme" *ngIf="search">
     <ion-buttons start search-back-button>
       <button ion-button icon-only (click)="toggleSearch($event)">
         <ion-icon name="arrow-back"></ion-icon>
@@ -28,7 +28,7 @@
   </ion-toolbar>
   <ion-toolbar item-select-toolbar color="full-light" *ngIf="!search && selectItemInProgress">
     <ion-buttons start>
-      <ion-checkbox [color]="factory.theme | async" (click)="toggleSelectAllItems($event, !toggleAllItems)" [checked]="toggleAllItems"></ion-checkbox>
+      <ion-checkbox [color]="(factory.appSettings | async).theme" (click)="toggleSelectAllItems($event, !toggleAllItems)" [checked]="toggleAllItems"></ion-checkbox>
     </ion-buttons>
     <ion-title>Select All</ion-title>
     <ion-buttons end>
@@ -51,7 +51,7 @@
       <button ion-item detail-none class="item-button" (click)="checkItem(item)" (press)="enableSelectItems($event, item)">
           <div item-left item-name-block>
             <div>
-              <ion-checkbox [color]="factory.theme | async" (click)="selectItem($event, item)" [checked]="allItemsSelected" *ngIf="selectItemInProgress"></ion-checkbox>
+              <ion-checkbox [color]="(factory.appSettings | async).theme" (click)="selectItem($event, item)" [checked]="allItemsSelected" *ngIf="selectItemInProgress"></ion-checkbox>
             </div>
             <div>{{item.name}}</div>
           </div>
@@ -70,6 +70,6 @@
     </ion-item-sliding>
   </ion-list>
   <ion-fab right bottom>
-    <button (click)="addNewItem($event)" ion-fab [color]="factory.theme | async"><ion-icon name="add"></ion-icon></button>
+    <button (click)="addNewItem($event)" ion-fab [color]="(factory.appSettings | async).theme"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
