--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -5,7 +5,7 @@
 </ion-header>
 <ion-content padding>
   <ion-card>
-    <img class="app-icon" src="../../assets/icon.png" />
+    <!--<img class="app-icon" src="../../assets/icon.png" />-->
     <ion-card-content>
       <ion-card-title>
         Todo Grocery
