fixing update store

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -5,14 +5,22 @@
 </ion-header>
 <ion-content padding>
   <ion-card>
-    <!--<img class="app-icon" src="../../assets/icon.png" />-->
-    <ion-card-content>
-      <ion-card-title>
-        Todo Grocery
-      </ion-card-title>
-      <p>
-        The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
-      </p>
-    </ion-card-content>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-4 align-self-center>
+          <img class="app-icon" src="../../assets/icon.png" />
+        </ion-col>
+        <ion-col>
+          <ion-card-content>
+            <ion-card-title>
+              Todo Grocery
+            </ion-card-title>
+            <p>
+              A simple Todo App for your grocery list making it easier for your everyday grocery tasks.
+            </p>
+          </ion-card-content>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card>
 </ion-content>
