--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,8 +7,8 @@
   <ion-card>
     <ion-grid>
       <ion-row>
-        <ion-col col-4 align-self-center>
-          <img class="app-icon" src="../../assets/icon.png" />
+        <ion-col col-4 align-self-center style="max-width:200px;">
+          <img class="app-icon" src="assets/icon.svg" />
         </ion-col>
         <ion-col>
           <ion-card-content>
